--- a/app/src/main/res/layout/fragment_news_admin_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_news_admin_recycler_view.xml
@@ -31,6 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/upperlayout">
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/addNews"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
