--- a/app/src/main/res/layout/fragment_admin_news.xml
+++ b/app/src/main/res/layout/fragment_admin_news.xml
@@ -68,7 +68,7 @@
     <Button
         android:id="@+id/cancle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="32dp"
         android:text="Cancle"
@@ -78,7 +78,7 @@
     <Button
         android:id="@+id/remove"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
