--- a/app/src/main/res/layout/fragment_admin_sport_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_admin_sport_recycler_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".farg_about_us">
+    tools:context=".AdminSportRecyclerViewFrag">
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -41,7 +41,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:layout_below="@id/headingnews"
-                android:id="@+id/recycler_view"
+                android:id="@+id/sport_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
