--- a/app/src/main/res/layout/newstile.xml
+++ b/app/src/main/res/layout/newstile.xml
@@ -16,16 +16,17 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="213dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/title"
+        android:textAlignment="center"
         android:textSize="16sp"
         android:textStyle="bold"
 
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 
 </android.support.constraint.ConstraintLayout>
