Added Event By Admin event database and event all functionalities with date and time picker

--- a/app/src/main/res/layout/fragment_fragment_admin_event_recyclerview.xml
+++ b/app/src/main/res/layout/fragment_fragment_admin_event_recyclerview.xml
@@ -8,7 +8,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment_news_user_recyclerview">
+    tools:context=".AdminEventRecyclerViewFrag">
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -20,32 +20,32 @@
 
 
         <RelativeLayout
-            android:id="@+id/newsHeading"
+            android:id="@+id/eventHeading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent">
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/recyclerviewlayout"
+            android:id="@+id/eventrecyclerviewlayout"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:layout_constraintBottom_toTopOf="@id/lower"
-            app:layout_constraintTop_toBottomOf="@id/newsHeading">
+            app:layout_constraintBottom_toTopOf="@id/eventlower"
+            app:layout_constraintTop_toBottomOf="@id/eventHeading">
 
             <TextView
-                android:id="@+id/headingnews"
+                android:id="@+id/headingevent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:text="News"
+                android:text="Events"
                 android:textColor="@color/black"
                 android:textSize="50sp"
                 android:textStyle="bold" />
 
             <android.support.v7.widget.RecyclerView
-                android:layout_below="@id/headingnews"
-                android:id="@+id/recycler_view_user_news"
+                android:layout_below="@id/headingevent"
+                android:id="@+id/recycler_view_user_event"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -53,12 +53,21 @@
 
                 />
         </RelativeLayout>
-
         <RelativeLayout
-            android:id="@+id/lower"
+            android:id="@+id/eventlower"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/addEvent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="10sp"
+                android:layout_marginEnd="10sp"
+                android:src="@drawable/baseline_add_white_48"
+                />
 
         </RelativeLayout>
 
