--- a/app/src/main/res/layout/eventtile.xml
+++ b/app/src/main/res/layout/eventtile.xml
@@ -20,31 +20,27 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textColor="@color/title"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/eventTileDate"
+        app:layout_constraintBottom_toTopOf="@+id/eventTileDate"
+        app:layout_constraintEnd_toEndOf="@+id/eventTileDate"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/eventTileDate"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/eventTileDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5sp"
         android:textAlignment="center"
-        android:textColor="@color/title"
-        android:textSize="16sp"
+        android:textColor="@color/green"
+        android:textSize="15sp"
         android:textStyle="bold"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/eventTileTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toBottomOf="@+id/eventTileTitle" />
 
 </android.support.constraint.ConstraintLayout>
