--- a/app/src/main/res/layout/fragment_admin_venue_recycler_viewfrag.xml
+++ b/app/src/main/res/layout/fragment_admin_venue_recycler_viewfrag.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminSportRecyclerViewFrag">
+    tools:context=".farg_about_us">
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -12,36 +11,35 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".NavigationDrawer"
-        tools:showIn="@layout/fragment_admin_sport_recycler_view">
-
+        tools:showIn="@layout/fragment_admin_venue_recycler_viewfrag">
 
         <RelativeLayout
-            android:id="@+id/sportHeading"
+            android:id="@+id/venueHeading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent">
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/sportrecyclerviewlayoutsport"
+            android:id="@+id/venuerecyclerviewlayout"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toTopOf="@id/lower"
-            app:layout_constraintTop_toBottomOf="@id/newsHeading">
+            app:layout_constraintTop_toBottomOf="@id/venueHeading">
 
             <TextView
-                android:id="@+id/headingsport"
+                android:id="@+id/headingVenue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:text="Sports"
+                android:text="Venue"
                 android:textColor="@color/black"
                 android:textSize="50sp"
                 android:textStyle="bold" />
 
             <android.support.v7.widget.RecyclerView
-                android:layout_below="@id/headingsport"
-                android:id="@+id/sport_recycler_view"
+                android:layout_below="@id/headingVenue"
+                android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -58,7 +56,7 @@
             app:layout_constraintBottom_toBottomOf="parent">
 
             <android.support.design.widget.FloatingActionButton
-                android:id="@+id/addSport"
+                android:id="@+id/addVenue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
