--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,18 +3,18 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#00BCD4</item>
-        <item name="colorPrimaryDark">#795548</item>
-        <item name="colorAccent">#8BC34A</item>
+        <item name="colorPrimary">@color/myColor</item>
+        <item name="colorPrimaryDark">@color/myColor</item>
+        <item name="colorAccent">@color/colorAccent</item>
 
     </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="colorPrimary">#00BCD4</item>
-        <item name="colorPrimaryDark">#795548</item>
-        <item name="colorAccent">#8BC34A</item>
+        <item name="colorPrimary">@color/myColor</item>
+        <item name="colorPrimaryDark">@color/myColor</item>
+        <item name="colorAccent">@color/colorAccent</item>
 
     </style>
 
