--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -12,17 +12,22 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#FF1C9997"
+        android:background="#3f42a4"
         android:elevation="4dp" />
 
-    <FrameLayout
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="1sp"
-        android:layout_marginBottom="1sp"
-        android:layout_below="@id/toolbar"
-        android:id="@+id/frame_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+  <FrameLayout
+      android:id="@+id/frame_container"
+      android:layout_width="379dp"
+      android:layout_height="525dp"
+      android:layout_below="@id/toolbar"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginBottom="8dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-    </FrameLayout>
+  </FrameLayout>
 </android.support.constraint.ConstraintLayout>
