--- a/app/src/main/res/layout/fragment_admin_sport_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_admin_sport_recycler_view.xml
@@ -31,11 +31,11 @@
 
             <TextView
                 android:id="@+id/headingsport"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:text="Sports"
-                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:text="@string/sports"
                 android:textSize="50sp"
                 android:textStyle="bold" />
 
