--- a/app/src/main/res/layout/fragment_admin_venue_recycler_viewfrag.xml
+++ b/app/src/main/res/layout/fragment_admin_venue_recycler_viewfrag.xml
@@ -32,6 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:textAlignment="center"
                 android:text="Venue"
                 android:textColor="@color/black"
                 android:textSize="50sp"
