--- a/app/src/main/res/layout/fragment_farg_about_us.xml
+++ b/app/src/main/res/layout/fragment_farg_about_us.xml
@@ -15,7 +15,7 @@
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="40dp"
