--- a/app/src/main/res/layout/fragment_frag_contact_us.xml
+++ b/app/src/main/res/layout/fragment_frag_contact_us.xml
@@ -15,7 +15,7 @@
         <TextView
             android:id="@+id/contactus_textview"
             android:layout_width="wrap_content"
-            android:layout_height="63dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="40dp"
