--- a/app/src/main/res/layout/timelinetile.xml
+++ b/app/src/main/res/layout/timelinetile.xml
@@ -20,12 +20,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/plusminus"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/timelineslotstarttime"
-            android:layout_width="213dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/title"
             android:textSize="16dp"
@@ -36,7 +37,7 @@
 
         <TextView
             android:id="@+id/timelineslotendtime"
-            android:layout_width="213dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/title"
             android:textSize="16dp"
@@ -47,7 +48,7 @@
 
         <TextView
             android:id="@+id/timelineslotcount"
-            android:layout_width="213dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/title"
             android:textSize="16dp"
@@ -58,41 +59,40 @@
 
     </android.support.constraint.ConstraintLayout>
 
-    <Button
-        android:id="@+id/timelineminus"
+    <android.support.constraint.ConstraintLayout
+        android:layout_marginStart="20sp"
+        android:id="@+id/plusminus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="-"
-        app:layout_constraintBottom_toBottomOf="@+id/timelinedetails"
-        app:layout_constraintEnd_toStartOf="@+id/timelineplus"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/timelinedetails"
-        app:layout_constraintTop_toTopOf="@+id/timelinedetails"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/timelineplus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+"
-        app:layout_constraintBottom_toBottomOf="@+id/timelineminus"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/timelineminus"
-        app:layout_constraintTop_toTopOf="@+id/timelineminus"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintStart_toEndOf="@id/timelinedetails"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <!--TextView
-        android:id="@+id/genre"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title" />
+        <Button
+            android:id="@+id/timelineminus"
+            android:layout_width="86dp"
+            android:layout_height="46dp"
+            android:text="-"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/timelineplus"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints" />
 
-    <TextView
-        android:id="@+id/year"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:textColor="@color/year" /-->
+        <Button
+            android:id="@+id/timelineplus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/timelineminus"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints" />
+
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
